# cache-macro

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  lib.rs
tests/: args_as_ref.rs  cache_type.rs  clone_only_type.rs  config.rs  multiple_args.rs  multiple_caches.rs  ref_return.rs
