[package]
name = "lru-cache-macros"
version = "0.1.0"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
edition = "2018"
categories = ["caching"]
keywords = ["lru", "procedural-macro", "cache"]
license = "MIT"
description = "A procedural macro for automatically caching the output of functions."

[dependencies]
quote = "0.6"

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]

[dependencies.syn]
version = "0.15"
features = ["full"]

[lib]
proc-macro = true