[package]
name = "lru-cache-macros"
version = "0.2.1"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
edition = "2018"
repository = "https://github.com/tylerreisinger/lru-cache-macro"
homepage = "https://github.com/tylerreisinger/lru-cache-macro"
readme = "README.md"
documentation = "https://docs.rs/lru-cache-macros"
categories = ["caching"]
keywords = ["lru", "procedural-macro", "cache"]
license = "MIT"
description = "A procedural macro for automatically caching the output of functions."

[dependencies]
quote = "0.6"

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]

[dependencies.syn]
version = "0.15"
features = ["full", "extra-traits"]

[dev-dependencies]
lru-cache = "0.1.1"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "https://github.com/tylerreisinger/lru-cache-macro", branch = "master" }
